[gd_scene load_steps=2 format=3 uid="uid://bcv6a6nua01pm"]

[ext_resource type="Script" uid="uid://dfy3hqtdf0ojl" path="res://scenes/components/dialogue_area.gd" id="1_n3myo"]

[node name="DialogueArea" type="Area2D"]
script = ExtResource("1_n3myo")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="activated" from="." to="." method="_on_activated"]
[connection signal="exited" from="." to="." method="_on_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
